updt: gradle test dependencies